--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,8 @@ jsonschema>=4.0.0
 ast-grep-py>=0.12.0
 pathspec>=0.11.0
 tabulate>=0.9.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+python-multipart>=0.0.6
+sqlalchemy>=2.0.0
+pydantic>=2.0.0
